# fairy

./: .coderabbit.yaml  .coderabbitrc.json  .env.example  .gitignore  README.md  back.py  main.py  pyproject.toml  pytest.ini  sample.py  workflow.md  workflow.mermaid
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: auto-claude-request.yml  claude-auto-fix.yml  claude-copilot-fix.yml  claude-test-fix.yml  claude.yml  coderabbit-to-claude.yml  debug-review-event.yml  debug-review.yml  sample.py  tests.yml
.serena/: project.yml
.spec-workflow/: config.toml  session.json
.spec-workflow/specs/rapras-yahoo-authentication/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
modules/: __init__.py
modules/analyzer/: __init__.py  anime_filter.py
modules/config/: constants.py  settings.py
modules/scraper/: __init__.py  rapras_scraper.py  session_manager.py  yahoo_scraper.py
modules/storage/: csv_exporter.py  models.py
modules/utils/: logger.py
tests/: conftest.py  test_main.py
tests/integration/: README.md  __init__.py  test_authentication_flow.py  test_e2e_workflow.py
tests/test_analyzer/: __init__.py  test_anime_filter.py
tests/test_config/: __init__.py  test_constants.py  test_settings.py  test_settings_dotenv.py
tests/test_scraper/: __init__.py  conftest.py  test_rapras_scraper.py  test_session_manager.py  test_yahoo_scraper.py  test_yahoo_scraper_fetch_products.py
tests/test_storage/: test_csv_exporter.py  test_models.py
tests/test_utils/: __init__.py  test_logger.py
(+3 files in other folders)
